# git-evtag-py

./: .pre-commit-config.yaml  README.md  git-evtag  git_evtag_py.py  pyproject.toml  run_tests.sh  tests.py
.github/workflows/: ci.yml
